--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,12 +1,11 @@
 .shop-items-ctn{
     display: flex;
     flex-wrap: wrap;
-    height: 90vh;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    height: auto;
+    width: 100%;
+    justify-content: center;
     margin-top: 5%;
-    gap: 3%;
+   
 }
 
 .item-ctn{
@@ -14,20 +13,89 @@
     flex-direction: column;
     align-items: center;
     gap:3%;
-    height: 35vh;
-    width: 30%;
+    height: 40vh;
+  
 }
 
-.item-ctn:hover{
- border:1px solid black;
-}
 
 .product-img{
     width:auto;
     height: 60%;
 }
 
+.item-ctn:hover .product-img {
+    transform:  scale(1.4);
+    transition: 500ms;
+    
+}
+
 .input-box-products-page{
     text-align: center;
     width: 10%;
+}
+
+
+/* Media Queries */
+
+
+@media only screen and (min-width: 300px) and (max-width: 599px){
+  /* For mobile phones: */
+ [class*="col-"] {
+     width: 100%;
+   }
+
+   body{
+    font-size: 11px;
+   }
+
+ }
+
+
+
+@media only screen and (min-width: 600px) and (max-width: 899px){
+ /* For tablets: */
+ .col-s-1 {width: 8.33%;}
+ .col-s-2 {width: 16.66%;}
+ .col-s-3 {width: 25%;}
+ .col-s-4 {width: 33.33%;}
+ .col-s-5 {width: 41.66%;}
+ .col-s-6 {width: 50%;}
+ .col-s-7 {width: 58.33%;}
+ .col-s-8 {width: 66.66%;}
+ .col-s-9 {width: 75%;}
+ .col-s-10 {width: 83.33%;}
+ .col-s-11 {width: 91.66%;}
+ .col-s-12 {width: 100%;}
+
+ body{
+    font-size: 12px;
+    display: flex;
+    flex-wrap: wrap;
+   }
+
+}
+
+
+
+
+
+@media only screen and (min-width: 900px) {
+ /* For desktop: */
+ .col-1 {width: 8.33%;}
+ .col-2 {width: 16.66%;}
+ .col-3 {width: 25%;}
+ .col-4 {width: 33.33%;}
+ .col-5 {width: 41.66%;}
+ .col-6 {width: 50%;}
+ .col-7 {width: 58.33%;}
+ .col-8 {width: 66.66%;}
+ .col-9 {width: 75%;}
+ .col-10 {width: 83.33%;}
+ .col-11 {width: 91.66%;}
+ .col-12 {width: 100%;}
+
+ body{
+   font-size: 15px;
+ }
+
 }
