--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -12,8 +12,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:3%;
+    gap:5%;
     height: 40vh;
+    margin-bottom: 5%;
   
 }
 
@@ -29,10 +30,18 @@
     
 }
 
-.input-box-products-page{
+
+.bx-cart-add{
+    font-size: 2rem;
+    background-color: #088413;
+    width: 5rem;
     text-align: center;
-    width: 10%;
+    border-radius: .3rem;
+    color: #ffffff;
+    text-shadow: 1px 1px 1px #000000;
+    cursor: pointer;
 }
+
 
 
 /* Media Queries */
@@ -69,8 +78,6 @@
 
  body{
     font-size: 12px;
-    display: flex;
-    flex-wrap: wrap;
    }
 
 }
