--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,15 @@
 
 }
 
+.search-input-field{
+    width: 100%;
+    height: 3rem;
+    font-size: 1.5rem;
+    border-radius: 5rem;
+    text-align: left;
+    padding-left: 2%;
+}
+
 .nav-links{
     text-decoration: none;
     color: black;
