--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -6,11 +6,11 @@
 .cart-background{
     position: absolute;
     top:0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: rgba(0,0,0,0.5);
     overflow: hidden;
-   
+    
   
 }
 
