--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,21 @@
 
 }
 
+.top-page-search-ctn{
+    width: 100%;
+    margin-top: -20%;
+    /*  OPEN ANIMATION */
+     animation: slide 0.5s normal;
+     animation-fill-mode: forwards;
+}
+
+ /* CART OPEN ANIMATION */
+
+@keyframes slide {
+    from {margin-top: calc(0% - px)}
+    to {margin-top: 0%;}
+  }
+
 .search-input-field{
     width: 100%;
     height: 3rem;
