--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -38,14 +38,14 @@ to {margin-right: -3%;}
 }
 
 /*Close cart icon */
-.bx-x{  
+#close-cart-icon{  
     font-size: 5rem;
     cursor: pointer;
     float: right;
     margin-right: 15%;
 }
 
-.bx-x:hover{ 
+#close-cart-icon:hover{ 
     color: red;
     transform: rotate(90deg) scale(1.5);
     transition: 500ms;
