--- a/src/components/CartAddBox/CartAddBox.css
+++ b/src/components/CartAddBox/CartAddBox.css
@@ -27,6 +27,8 @@
 .product-infos-ctn{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    
    
 }
 
@@ -35,7 +37,7 @@
     height: 2.5rem;
     font-size: 1rem;
     border-radius: .5rem;
-   
+    cursor: default;
     margin-top: 20%;
     border: 1px solid grey;
     text-align: center;
@@ -47,7 +49,8 @@
     justify-content: center;
     width:2.5rem;
    font-size: 1.5rem;
-   cursor: pointer
+   cursor: pointer;
+   margin-bottom:5%;
  
 }
 
