--- a/src/components/CartAddBox/CartAddBox.css
+++ b/src/components/CartAddBox/CartAddBox.css
@@ -3,7 +3,7 @@
 .cart-add-ctn{
     position: absolute;
     top: 0;
-    height: 100%;
+    height: 150vh;
     width: 100%;
     background-color: rgba(0,0,0,0.5);
 }
