--- a/src/components/CartAddBox/CartAddBox.css
+++ b/src/components/CartAddBox/CartAddBox.css
@@ -59,7 +59,14 @@
  
 }
 
+#cart-add-box-minus-icon:hover{
 
+    color: #ff5b5b;
+}
+
+#cart-add-box-plus-icon:hover{
+    color: #0297b7;
+}
 
 #close-add-cart-box-icon{
     
