--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -108,19 +108,21 @@ to {margin-right: -3%;}
   #cart-quantity-number-input-field{
     width: 3rem;
     height: 2rem;
-    font-size: 1rem;
+    font-size: .9rem;
     border-radius: .3rem;
     border: 1px solid grey;
     text-align: center;
+    padding-left: 25%;
     cursor: default;
 
   }
 
   .quantity-change-buttons{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     cursor: pointer;
     display: flex;
-    gap: 20%;
+    gap: 40%;
+    margin-top: -50%;
     
     
   }
