--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -8,7 +8,7 @@
     top:0;
     left:0;
     min-height: 150vh;
-    height: auto;
+    height: 1000vh;;
     width: 100%;
     background-color: rgba(0,0,0,0.5);  
     overflow: none;
@@ -26,7 +26,7 @@
     animation-fill-mode: forwards;
     z-index: 50000000000;
     cursor: default;
-    overflow: none;
+   
 }
 
 .cart-content{
@@ -146,6 +146,8 @@ to {margin-right: 0%;}
   #cart-trash-icon:hover{
     color: #ff5b5b;
   }
+
+  
 
 
   /* Media Queries */
