--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -136,6 +136,7 @@
         font-size: 2rem;
         color: #ffffff;
         text-decoration: none;
+        border-bottom: 2px solid #ffffff;
      }
 
      #logo{
@@ -194,6 +195,7 @@
         font-size: 2rem;
         color: #ffffff;
         text-decoration: none;
+        border-bottom: 2px solid #ffffff;
      }
 
    #logo{
@@ -230,6 +232,10 @@
    }
 
    .touch-devices-nav-links{
+    display: none;
+   }
+
+   .nav-links-touch-devices{
     display: none;
    }
 
