--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     margin-top: .5%;
+    margin-bottom: .5%;
     border-bottom: 1px solid black;
 }
 
@@ -49,7 +50,7 @@
     text-decoration: none;
     color: black;
     font-size: 1.5rem;
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 1rem;
 }
 
