--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -8,7 +8,7 @@
     top:0;
     left:0;
     min-height: 150vh;
-    height: 1000vh;;
+    height: 1000vh;
     width: 100%;
     background-color: rgba(0,0,0,0.5);  
     overflow: none;
@@ -161,9 +161,10 @@ to {margin-right: 0%;}
 
    .cart-box{
     margin-top: -200%;
-    margin-right: 5%;
     animation: flyFromAbove 0.5s normal;
     animation-fill-mode: forwards;
+    width: 100%;
+    float: none;;
    }
 
    @keyframes flyFromAbove {
