--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -55,8 +55,8 @@
      width: 100%;
    }
 
-   body{
-    font-size: 11px;
+   .item-ctn{
+    margin-top: 10%;
    }
 
    .item-ctn:hover .product-img{
@@ -83,9 +83,7 @@
  .col-s-11 {width: 91.66%;}
  .col-s-12 {width: 100%;}
 
- body{
-    font-size: 12px;
-   }
+
 
   
 
@@ -110,8 +108,6 @@
  .col-11 {width: 91.66%;}
  .col-12 {width: 100%;}
 
- body{
-   font-size: 15px;
- }
+
 
 }
