responsive design issues fixed

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -92,6 +92,7 @@
      #close-menu-icon{
         font-size: 4rem;
         cursor: pointer;
+        z-index: 999999999;
      }
 
      .touch-devices-nav-links-ctn{
@@ -151,6 +152,7 @@
  #close-menu-icon{
         font-size: 3rem;
         cursor: pointer;
+        z-index: 999999999;
      }
 
      .touch-devices-nav-links-ctn{
