--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -52,8 +52,13 @@
     font-size: 3.5rem;
     cursor: pointer;
     margin-left: 50%;
+    color: rgba(255,255,255,0.9);
+   
     
-    
+}
+
+#cart-icon:hover{
+    color: rgba(255,255,255,1);
 }
 
 
