--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 *{
  margin: 0 ;
- font-family: Montserat !important;
+ font-family: Montserat, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 /* Media Queries */
