change z-index of close menu icon navbar mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -99,6 +99,7 @@
      #close-menu-icon{
         font-size: 4rem;
         cursor: pointer;
+        z-index: 99999;
      }
 
      .touch-devices-nav-links-ctn{
